@startuml
' ==========================================================
' Domain Model Diagram – US2.2.1 (Create and Manage Vessel Types)
' Author: Jorge Ubaldo Rodrigues
' Context: Port Management – Vessel Type Definition
' ==========================================================

skinparam monochrome true
skinparam shadowing false
hide methods
hide circle
title US2.2.1 – Domain Model (Vessel Type Management)

package "Vessel Type Context" as VTC {

    ' ==========================
    ' ENTITY
    ' ==========================
    class VesselType {
        - Name : string
        - Description : string
        - MaxBays : int
        - MaxRows : int
        - MaxTiers : int
        - Capacity : float
        --
        + ChangeName(name)
        + ChangeDescription(description)
        + ChangeDimensions(maxBays, maxRows, maxTiers)
        + ChangeMaxBays(bays)
        + ChangeMaxRows(rows)
        + ChangeMaxTiers(tiers)
    }

    class VesselTypeId {
        - Value : Guid
    }

    ' ==========================
    ' DATA TRANSFER OBJECTS (DTOs)
    ' ==========================
    class VesselTypeDto {
        + Id : Guid
        + Name : string
        + Description : string
        + MaxBays : int
        + MaxRows : int
        + MaxTiers : int
        + Capacity : float
    }

    class CreatingVesselTypeDto {
        + Name : string
        + Description : string
        + MaxBays : int
        + MaxRows : int
        + MaxTiers : int
    }

    class UpdateVesselTypeDto {
        + Name : string?
        + Description : string?
        + MaxBays : int?
        + MaxRows : int?
        + MaxTiers : int?
    }

    ' ==========================
    ' FACTORY & MAPPERS
    ' ==========================
    class VesselTypeFactory {
        + CreateBasicVesselType(dto)
    }

    class VesselTypeMappers {
        + CreateDtoVesselType(entity)
    }

    ' ==========================
    ' REPOSITORY
    ' ==========================
    interface IVesselTypeRepository {
        + GetAllAsync()
        + GetByIdAsync(id)
        + GetByNameAsync(name)
        + GetByDescriptionAsync(description)
        + FilterAsync(name, description, query)
        + AddAsync(entity)
    }

    ' ==========================
    ' SERVICE (Domain/Application Layer)
    ' ==========================
    class VesselTypeService {
        + GetAllAsync()
        + GetByIdAsync(id)
        + AddAsync(dto)
        + GetByNameAsync(name)
        + GetByDescriptionAsync(description)
        + FilterAsync(name, description, query)
        + UpdateAsync(id, dto)
    }

    ' ==========================
    ' CONTROLLER (Interface Layer)
    ' ==========================
    class VesselTypeController {
        + GetAll()
        + GetById(id)
        + GetByName(name)
        + GetByDescription(desc)
        + Create(dto)
        + Filter(name, desc, query)
        + Update(id, dto)
    }

    ' ==========================
    ' SHARED COMPONENTS
    ' ==========================
    class BusinessRuleValidationException
    class IUnitOfWork
}

' ==========================
' RELATIONSHIPS
' ==========================

VesselTypeController --> VesselTypeService : uses
VesselTypeService --> IVesselTypeRepository : depends on
VesselTypeService --> IUnitOfWork : commits
VesselTypeService --> VesselTypeFactory : creates entities
VesselTypeService --> VesselTypeMappers : maps entities ↔ DTOs
VesselTypeFactory --> VesselType : instantiates
VesselType --> VesselTypeId : identified by
IVesselTypeRepository --> VesselType : manages persistence

' ==========================
' FUTURE LINK (US2.2.2 – Vessel Definition)
' ==========================
class Vessel {
    - ImoNumber : string
}
Vessel --> VesselType : references >

@enduml
